Gitpod not working - change css on about and instructions for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,8 +541,8 @@ footer ul{
         top: 4em;
     }
     .instructions{
-        width: 100%;
-        padding-left: 20%;
+        width: 90%;
+        padding-left: 2em;
         font-size: 100%;
         font-weight:100 ;
     }
