Gitpod not working - change css on about and instructions for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,7 +545,7 @@ footer ul{
     }
     .instructions{
         width: 95%;
-        padding-left: 1em;
+        padding-left: 10%;
         font-size: 100%;
         font-weight:100 ;
     }
