--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ footer ul{
     color:#f5cd11;
     position: absolute;
     z-index: 2;
-    left: 0; right: 0; top: 0%; bottom: 0; margin: auto; /* center */
+    left: 47%; right: 0%; top: 8%; bottom: 0%; margin: auto; /* center */
     font-size: 500%;
     outline: none;
     border: none;
@@ -422,7 +422,7 @@ footer ul{
         margin-left: 60%;
     }
     #play{
-        padding-top: 8%;
+        left: 45%;
     }
     #message-board{
         left: 1em;
@@ -465,8 +465,10 @@ footer ul{
         padding-top: 0;
     }
     #play{
-        padding-top: 0;
-        padding-bottom: 30%;
+        /* padding-top: 0; */
+        /* padding-bottom: 30%; */
+        top: -23%;
+        left: 43%;
     }
     #gryffindor.game-btn,
     #hufflepuff.game-btn{
@@ -529,6 +531,8 @@ footer ul{
         width: 140%;
     }
     #play{
+        top: -20%;
+        left: 41%;
         font-size: 300%;
     }
     #dobby{
