--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ footer ul{
     color:#f5cd11;
     position: absolute;
     z-index: 2;
-    left: 47%; right: 0%; top: 8%; bottom: 0%; margin: auto; /* center */
+    left: 47%; right: 0%; top: 4%; bottom: 0%; margin: auto; /* center */
     font-size: 500%;
     outline: none;
     border: none;
@@ -423,6 +423,7 @@ footer ul{
     }
     #play{
         left: 45%;
+        top: 10%;
     }
     #message-board{
         left: 1em;
@@ -467,9 +468,9 @@ footer ul{
     #play{
         /* padding-top: 0; */
         /* padding-bottom: 30%; */
-        top: -23%;
-        left: 43%;
-    }
+        top: -27%;
+        left: 42%;
+    } */
     #gryffindor.game-btn,
     #hufflepuff.game-btn{
         width: 100%;
@@ -532,7 +533,7 @@ footer ul{
     }
     #play{
         top: -20%;
-        left: 41%;
+        /* left: 40%; */
         font-size: 300%;
     }
     #dobby{
